# lightstorm

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  open-source-licenses.txt  simple_kpc.c  simple_kpc.h
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/workflows/: linux-ci.yml  macos-ci.yml
cmake/: cpack.cmake  lightstorm.cmake  mruby.cmake  version.cmake
cmake/packaging/: cpack.DEB-ubuntu.cmake
include/lightstorm/: version.h
include/lightstorm/compiler/: compiler.h
include/lightstorm/config/: config.h
include/lightstorm/conversion/: conversion.h
include/lightstorm/dialect/: rite.h  rite.td
include/lightstorm/optimizations/: optimizations.h
include/lightstorm/runtime/: lightstorm_runtime.h  runtime.h
lib/: CMakeLists.txt  version.cpp
lib/compiler/: CMakeLists.txt  compiler.cpp  converter.cpp  converter.h
lib/conversion/: CMakeLists.txt  c_conversion.cpp
lib/dialect/: CMakeLists.txt  rite.cpp
lib/optimizations/: CMakeLists.txt  optimizations.cpp
lib/runtime/: CMakeLists.txt  lightstorm_runtime.c  lightstorm_runtime_main.c  runtime.c  runtime_main.c
runtime/: CMakeLists.txt  lightstorm_runtime.c  lightstorm_runtime.h
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt  bench.py  benchmarks_bytecode_main.c  bm_ao_render.rb  bm_so_lists.rb  long_loop.rb
tests/end2end/: 00.rb  02.rb  CMakeLists.txt  arith.rb  calls.rb  cmp.rb  end2end_test_main.c  hash.rb  jumps.rb  loads.rb
tests/end2end/00/: lightstorm.rb
tests/integration/: CMakeLists.txt  arith.rb  array.rb  calls.rb  class.rb  cmp.rb  constants.rb  escape_analysis.rb  hash.rb  jumps.rb  lit.cfg  loads.rb  module.rb  ranges.rb
tests/integration/errors/: block.rb  block_args.rb  default_args.rb  ensure.rb  except.rb  keyword_args.rb  lambda.rb  rescue.rb  return_from_block.rb  super.rb  syntax.rb  var_args.rb  yeild.rb
tests/intergation/: CMakeLists.txt  integration_test_main.c
tests/intergation/00/: host.rb
tests/intergation/geometry_quadtree/: host.rb  lightstorm.rb
tools/: CMakeLists.txt
tools/lightstorm/: CMakeLists.txt  lightstorm.cpp
